<resources>
    <string name="app_name">PDM_2021_II_P1_PROYECTO</string>
    <string name="txtnumerolibro">Numero de Libro</string>
    <string name="txtnombre">Nombre</string>
    <string name="txtautor">Autor</string>
    <string name="txtfechapublicacion">Fecha de Publicacion</string>
    <string name="txvnombre">Nombre</string>
    <string name="txteditorial">Editorial</string>
    <string name="txvfechapublicacion">Fecha de Publicacion</string>
    <string name="txveditorial">Editorial</string>
    <string name="txvnumerolibro">Numero de Libro</string>
    <string name="txvautor">Autor</string>
    <string name="btnguardar">Guardar</string>
    <string name="btnatras">Atras</string>
    <string name="btnlibros">Libros</string>
    <string name="btnvisualizarlibro">Visualizar Libros</string>
    <string name="txvnumerolibros">Numero de Libro</string>
    <string name="txtnumerolibros">Numero libros</string>
    <string name="btnbuscar">Buscar</string>
    <string name="txvnombreb">Nombre</string>
    <string name="txvnumerolibrob">Numero libro</string>
    <string name="txvfechapublicacionb">Fecha de Publicacion</string>
    <string name="txvautorb">Autor</string>
    <string name="txveditorialb">Editorial</string>
    <string name="btnalumnos">Alumnos</string>
    <string name="btnvisualizaralumnos">Visualizar Alumnos</string>
    <string name="btnprestamolibro">Prestamo de Libro</string>
    <string name="btnvisualizarprestamolibro">Visualizar Pretamo de Libro</string>
    <string name="txvnombreA">Nombre Alumno</string>
    <string name="txvnumerocuenta">Numero de Cuenta</string>
    <string name="txvnombrealumno">Alumno</string>
    <string name="txvcarrera">Carrera</string>
    <string name="txvfechaingreso">Fecha de Ingreso</string>
    <string name="txvcorreo">Correo</string>
    <string name="txtnumerocuenta">Numero Cuenta</string>
    <string name="txtalumno">Alumno</string>
    <string name="txtcarrera">Carrera</string>
    <string name="txtfechaingreso">Fecha de Ingreso</string>
    <string name="txtcorreo">Correo</string>
    <string name="btnguardara">Guardar</string>
    <string name="btnatrasa">Atras</string>
    <string name="txvnumerocuentab">Numero de Cuenta:</string>
    <string name="txtnumerocuentaa">Numero de Cuenta</string>
    <string name="btnbuscara">Buscar</string>
    <string name="txvnumerocuentabb">Numero Cuenta</string>
    <string name="txvnombreab">Nombre</string>
    <string name="txvcarrerab">Carrera</string>
    <string name="txvfechaingresob">Fecha de Ingreso</string>
    <string name="txvcorreob">Correo</string>
    <string name="txvnumeroprestamo">Numero de Prestamo</string>
    <string name="txvfechaprestamo">Fecha de Prestamo</string>
    <string name="txvnumerocuentap">Numero de Cuenta</string>
    <string name="txvnumerolibrop">Numero de Libro</string>
    <string name="txvfechadevolucion">Fecha de Devolucion</string>
    <string name="txtnumeroprestamo">Numero de Prestamo</string>
    <string name="txtfechaprestamo">Fecha de Prestamo</string>
    <string name="txtnumerocuentap">Numero de Cuenta</string>
    <string name="txtnumerolibrop">Numero de Libro</string>
    <string name="txtfechadevolucion">Fecha de devolucion</string>
    <string name="btnguardarp">Guardar</string>
    <string name="btnatrasp">Atras</string>
    <string name="txvnumeroprestamob">Fecha Devolucion</string>
    <string name="txvnumeroprestamobu">Numero de Prestamo</string>
    <string name="txvnumerocuentapb">Numero Cuenta</string>
    <string name="txvfechaprestamopb">Fecha de Prestamo</string>
    <string name="btnbuscarp">Buscar</string>
    <string name="txtnumeroprestamobu">Numero de Prestamo</string>
    <string name="txvnumerolibropb">Numero de Libro</string>
</resources>