<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3394C1"
    tools:context=".LibroActivity">

    <TextView
        android:id="@+id/txvNumeroLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="108dp"
        android:text="@string/txvnumerolibro"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txvNombre"
        app:layout_constraintEnd_toStartOf="@+id/txtNumeroLibro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="33dp"
        android:text="@string/txvnombre"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txvFechaPublicacion"
        app:layout_constraintEnd_toStartOf="@+id/txtNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNumeroLibro" />

    <TextView
        android:id="@+id/txvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="33dp"
        android:text="@string/txvautor"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txtAutor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre" />

    <TextView
        android:id="@+id/txvFechaPublicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/txvfechapublicacion"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvAutor" />

    <TextView
        android:id="@+id/txvEditorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="33dp"
        android:text="@string/txveditorial"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txtEditorial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvFechaPublicacion" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtnombre"
        app:layout_constraintBottom_toTopOf="@+id/txtAutor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNumeroLibro" />

    <EditText
        android:id="@+id/txtFechaPublicacion"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtfechapublicacion"
        app:layout_constraintBottom_toTopOf="@+id/txtEditorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txvFechaPublicacion"
        app:layout_constraintTop_toBottomOf="@+id/txtAutor" />

    <EditText
        android:id="@+id/txtAutor"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtautor"
        app:layout_constraintBottom_toTopOf="@+id/txtFechaPublicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvAutor"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtEditorial"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="198dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txteditorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvEditorial"
        app:layout_constraintTop_toBottomOf="@+id/txtFechaPublicacion" />

    <EditText
        android:id="@+id/txtNumeroLibro"
        android:layout_width="183dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtnumerolibro"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvNumeroLibro"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#121111"
        android:text="@string/btnguardar"
        android:textColor="#FFFFFF"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditorial" />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:backgroundTint="#121111"
        android:text="@string/btnatras"
        android:textColor="#FFFFFF"
        app:icon="@android:drawable/ic_menu_revert"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnGuardar"
        app:layout_constraintStart_toEndOf="@+id/btnGuardar" />
</androidx.constraintlayout.widget.ConstraintLayout>